/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Energinet.DataHub.MeteringPoints.IntegrationEventContracts";

/**
 * Represents a CreateChargeLinksCommand
 */

message ChargeLinkCommandAcceptedContract {
  string metering_point_id = 1;
  MeteringPointTypeContract metering_point_type = 2;
  google.protobuf.Timestamp start_date_time = 3; // In UTC. The charge link period's valid from date and time
}

enum MeteringPointTypeContract
{
  MPT_UNKNOWN = 0;
  MPT_CONSUMPTION = 1,
  MPT_PRODUCTION = 2,
  MPT_EXCHANGE = 3,
  MPT_VEPRODUCTION = 4,
  MPT_ANALYSIS = 5,
  MPT_SURPLUSPRODUCTIONGROUP = 6,
  MPT_NETPRODUCTION = 7,
  MPT_SUPPLYTOGRID = 8,
  MPT_CONSUMPTIONFROMGRID = 9,
  MPT_WHOLESALESERVICE = 10,
  MPT_OWNPRODUCTION = 11,
  MPT_NETFROMGRID = 12,
  MPT_NETTOGRID = 13,
  MPT_TOTALCONSUMPTION = 14,
  MPT_GRIDLOSSCORRECTION = 15,
  MPT_ELECTRICALHEATING = 16,
  MPT_NETCONSUMPTION = 17,
  MPT_OTHERCONSUMPTION = 18,
  MPT_OTHERPRODUCTION = 19,
  MPT_EXCHANGEREACTIVEENERGY = 20,
  MPT_INTERNALUSE = 21,
}